test/e2e/testdata/ratelimit-retry-after-header.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: ratelimit-retry-after-header-ctp
  namespace: gateway-conformance-infra
spec:
  headers:
    enableRetryAfterHeader: true
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: same-namespace
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: ratelimit-retry-after-header-btp
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ratelimit-retry-after-header
  rateLimit:
    type: Global
    global:
      rules:
        - clientSelectors:
            - headers:
                - name: x-user-id
                  type: Exact
                  value: retry-after-global
          limit:
            requests: 3
            unit: Hour
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ratelimit-retry-after-header
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /retry-after-global
      backendRefs:
        - name: infra-backend-v1
          port: 8080
